# ChangeLog for app-admin/gentoo-bootstrap
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Jan 2015; Johann Schmitz <ercpe@gentoo.org> gentoo-bootstrap-0.2.ebuild,
  gentoo-bootstrap-0.3.ebuild:
  Updated homepage

  28 Mar 2014; Johann Schmitz <ercpe@gentoo.org> gentoo-bootstrap-0.2.ebuild,
  gentoo-bootstrap-0.3.ebuild:
  Fixed typo's

*gentoo-bootstrap-0.3 (23 Mar 2014)

  23 Mar 2014; Johann Schmitz <ercpe@gentoo.org> +gentoo-bootstrap-0.3.ebuild:
  Version bump of gentoo-bootstrap

*gentoo-bootstrap-0.2 (19 Mar 2014)

  19 Mar 2014; Johann Schmitz <ercpe@gentoo.org> +gentoo-bootstrap-0.2.ebuild,
  -gentoo-bootstrap-0.1.ebuild:
  Version bump. Dropped x86 due to dep to dev-python/sh