@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  app-admin/gentoo-bootstrap: Add github to remote-id in metadata.xml
+
   17 Jan 2015; Johann Schmitz <ercpe@gentoo.org> gentoo-bootstrap-0.2.ebuild,
   gentoo-bootstrap-0.3.ebuild:
   Updated homepage
